@@ -1,0 +1,52 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+ <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Flot Examples</title>
+    <link href="layout.css" rel="stylesheet" type="text/css"></link>
+    <!--[if IE]><script language="javascript" type="text/javascript" src="../excanvas.min.js"></script><![endif]-->
+    <script language="javascript" type="text/javascript" src="../jquery.js"></script>
+    <script language="javascript" type="text/javascript" src="../jquery.flot.js"></script>
+ </head>
+    <body>
+    <h1>Flot Examples</h1>
+
+    <div id="placeholder" style="width:600px;height:300px;"></div>
+
+    <p>You can apply a specific color to the part of a data series
+    below a threshold. This is can be useful for highlighting negative
+    values, e.g. when displaying net results or what's in stock.</p>
+
+    <p class="controls">
+    <input type="button" value="Threshold at 5">
+    <input type="button" value="Threshold at 0">
+    <input type="button" value="Threshold at -2.5">
+    </p>
+
+<script id="source" language="javascript" type="text/javascript">
+$(function () {
+    var d1 = [];
+    for (var i = 0; i <= 60; i += 1)
+        d1.push([i, parseInt(Math.random() * 30 - 10)]);
+
+    function doPlot(t) {
+        $.plot($("#placeholder"), [ {
+            data: d1,
+            color: "rgb(30, 180, 20)",
+            threshold: { below: t, color: "rgb(200, 20, 30)" },
+            lines: { steps: true }
+        } ]);
+    }
+
+    doPlot(0);
+    
+    $(".controls input").click(function (e) {
+        e.preventDefault();
+        var t = parseFloat($(this).val().replace('Threshold at ', ''));
+        doPlot(t);
+    });
+});
+</script>
+
+ </body>
+</html>
